# StabPy

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_farima.py  example_nig.py  example_stable.py
stabpy/: __init__.py  farima.py  nig.py  normal.py  stable_tools.py
tests/: test_farima.py  test_nig.py  test_normal.py  test_stable.py
